--- a/index.css
+++ b/index.css
@@ -23,9 +23,9 @@ header {
     border-bottom: 1px solid #C6C6C6;
 }
 
-.oldgram-logo {
+.oldagram-logo {
     width: 127px;
-    margin: 3 0 0 16.5px;
+    margin: 3px 0 0 16.5px;
 }
 
 .your-avatar, .avatar {
@@ -44,8 +44,8 @@ header {
     background-color: #FFFFFF;
 }
 
-.post-3 {
-    padding-bottom: 15.5px;
+.post-content:last-of-type {
+    padding-bottom: 15px;
 }
 
 /* user info */
@@ -96,24 +96,33 @@ header {
 ul {
     list-style-type: none;
     padding: 0;
-    margin: 0 0 4px 0;
+    margin-bottom: 4px;
 }
 
 .icons {
     display: flex;
     gap: 12px;
+    margin-top: -6px; 
 }
 
-.icon-size {
+.icon-properties {
     width: 23px;
     height: auto;
     cursor: pointer;
+}
+
+.icon-properties:active {
+    transform: scale(0.9);
 }
 
 .like-count {
     font-weight: bold;
     font-size: 14px;
     margin-bottom: 4px;
+}
+
+.liked {
+    filter: brightness(0) saturate(100%) invert(34%) sepia(79%) saturate(7483%) hue-rotate(356deg) brightness(98%) contrast(96%);
 }
 
 .username-caption {
