--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ html, body {
     margin: 0 auto;
     padding: 0;
     font-family: "Source Sans 3", sans-serif;
-    background-color: #F5F5F5;
+    background-color: #dedede;
 }
 
 .main-design {
